--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
 	background-repeat: all;
 	color: #ffffff;
 	align-content: center;
+	font-family: 'Amatic SC', cursive;
 }
 
 header {
@@ -15,29 +16,41 @@ header {
 
 h1 {
 	font-size: xx-large;
-	font-style:; 
+	font-style: italic;
 	text-align: center;
 }
 
 .previous {
 	text-align: center;
 }
-.box1{
-	margin: 30px 0px 30px 30px;
-	padding: 40px;
-	border: 5px solid black;
-	background: black;
-	float: left;
 
+.main_content {
+	text-align: center;
+	background: #57816d;
+	margin: auto;
+	width: 400px;
+	padding: 5px;
 
 }
-.box2{
-	margin: 30px 30px 30px 0px;
+
+.box1{
+	margin: auto;
 	padding: 40px;
-	border: 5px solid black;
+	display: inline-block;
+	position: relative;
+}
+
+img {
+	margin-top: 20px;
+}
+
+.box2{
+	margin: auto;
+	padding: 40px;
 	text-align: center;
-	background: black;
-	float: left;
+	display: inline-block;
+	width: 200px;
+	position: relative;
 
 
 }
